components/heptagon/test/bad/bad_merge3.ept
type t = A | B | C | D

node t2bool(x: t) returns (b: bool)
  let
    b = merge x (B-> true) (C-> true)
  tel
